#3419 - justerade gc-inställningar för att undvika långa gc-pauser och lagt in så att dump skapas vid oom som standard